--- a/resources/assets/stylesheets/less/header.less
+++ b/resources/assets/stylesheets/less/header.less
@@ -108,16 +108,19 @@
             width: 100%;
         }
     }
+}
+.action-menu.avatar-menu {
+    z-index: 1002;
 
     .action-menu-title{
         margin: 0em 0 0.3em;
     }
 
     .action-menu-content {
-        z-index: 1002;
         position: absolute;
-        top: 39px;
+        top: 41px;
         right: -31px;
+
         /*padding: 4px 28px 4px 8px;*/
         background: #fff;
         box-shadow: 1px 1px 1px @dark-gray-color-60;
